[WIP] add styling for righbar page-seo, fix icon size for elements, fix alignment for left,right bar titles

--- a/Resources/Private/Less/Elements/_left-bar.less
+++ b/Resources/Private/Less/Elements/_left-bar.less
@@ -16,7 +16,7 @@
   }
 
   .title-icon-left {
-    top: 7px;
+    top: 11px;
     position: relative;
     font-size: 32px;
     padding-left: 15px;
@@ -32,6 +32,7 @@
       text-align: left;
       padding: 10px 5px 10px 10px;
       font-size: 18px;
+      vertical-align: middle;
     }
 
     .left-bar-button {
