--- a/Resources/Private/Less/Elements/_top-bar.less
+++ b/Resources/Private/Less/Elements/_top-bar.less
@@ -220,7 +220,7 @@
 
     .btn-text {
       position: relative;
-      top: 5px;
+      top: 9px;
     }
   }
 }
