--- a/Resources/Private/Less/Partials/_elements.less
+++ b/Resources/Private/Less/Partials/_elements.less
@@ -163,15 +163,19 @@
         width: 100%;
 
         .icon-markup {
-          width: 27px;
+          width: 50px;
+          height: 50px;
           text-align: center;
           vertical-align: middle;
           display: block;
           margin: 0 auto;
 
           img {
-            height: 100%;
-            width: 100%;
+            height: 40px;
+            width: 40px;
+            margin: 0 auto;
+            top: 10%;
+            position: relative;
           }
         }
       }
