--- a/Resources/Private/Less/Partials/_titles.less
+++ b/Resources/Private/Less/Partials/_titles.less
@@ -21,7 +21,7 @@
 }
 
 .title-normal-casing {
-  font-size: @font-size-smaller;
+  font-size: @font-size-small;
   text-transform: none;
   margin-top: 4px;
 }
